--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
+    "test": "mocha"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
